[feat] reload 시 플레이어 등록